# cdirect

./: .gitignore  .prettierignore  Cargo.toml  README.md  cdirect.example.yaml  cdirect.yaml  package.json  stream-config.json
player/: README.md  package-lock.json  package.json  server.mjs
player/public/: app.js  index.html  styles.css
scripts/: isolate-dash-demo.sh  isolate-dash-viewer.sh
src/: APITester.tsx  App.tsx  cli.rs  config.rs  devices.rs  encoder.rs  frontend.tsx  index.css  index.html  index.ts  lib.rs  main.rs  manifest.rs  pipeline.rs  s3_publish.rs  segment.rs
src/components/: dash-player.tsx  dash-stream-player.tsx  encoding-diagnostic.tsx  stream-diagnostics-panel.tsx  stream-preview-player.tsx
src/components/ui/: button.tsx  card.tsx  metric.tsx  select.tsx  status-pill.tsx
src/contexts/: player-context.tsx
src/hooks/: use-capture-inputs.ts  use-streams.ts
src/lib/: stream-diagnostics.ts  utils.ts
src/pages/: player.tsx  producer.tsx
src/types/: api.ts  stream.ts
tests/: integration_stream.rs
