[package]
name = "cdirect"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "time"] }
